# Oct.-RM-task2-EnergyOrgan

./: README.md  main.cpp  organ.cpp  organ.h
Energy_organ/: CMakeLists.txt  main.cpp
Energy_organ/class/organ/: .student.cpp.swp  CMakeLists.txt  organ.cpp
Energy_organ/class/organ/include/: organ.h
